--- a/app/views/users/subscriptions/show.html.erb
+++ b/app/views/users/subscriptions/show.html.erb
@@ -11,8 +11,8 @@
         <li class="px-2 py-1 bg-primary text-white hover:bg-green-shade-1 transition ease-in-out duration-200"><%= link_to t('payment_settings'), user_subscription_path %></li>
       </ul>
     </div>
-    <div class="callout max-w-xl mx-auto">
-      <%= form_tag({ action: :update }, id: "payment-form", method: :put) do %>
+    <div class="callout max-w-xl mx-auto" data-controller="payment-settings">
+      <%= form_tag({ action: :update }, method: :put, 'data-target': 'payment-settings.form') do %>
         <div class="space-y-3">
           <h2 class="heading"><%= t 'views.subscriptions.update.heading' %></h2>
           <% if flash[:error].present? %>
@@ -65,26 +65,27 @@
               <% end %>
 
               <div class="mt-1 capitalize">
-                <a href="#" id="add-new-card" class="button"><%= @customer_payment_method.nil? ? t('add_new_card') : t('edit_card') %></a>
+                <button type="button" id="add-new-card" class="button" data-action="payment-settings#showStripeCardField"><%= @customer_payment_method.nil? ? t('add_new_card') : t('edit_card') %></button>
               </div>
             </div>
-
           </div>
 
-          <div id="new-card-div" class="hidden">
+          <div id="new-card-div" class="hidden" data-controller="stripe-card-element" data-target="payment-settings.stripeCardElement">
             <label for="card-element" class="font-bold"><%=t 'add_new_card' %></label>
-            <div id="card-element" class="input py-1"></div>
+            <div id="card-element" class="input my-1" data-target="stripe-card-element.container"></div>
+            <div class="text-orange-shade-1" data-target="stripe-card-element.errors"></div>
+            <%= hidden_field_tag :payment_method_id, nil, 'data-target': 'stripe-card-element.paymentMethodField' %>
           </div>
-
-          <div id="card-errors"></div>
 
           <div>
             <i class="fa fa-lock" aria-hidden="true"></i> <span class="ml-1">Secured by Stripe</span>
           </div>
 
+          <div id="card-errors" class="text-orange-shade-1" data-target="payment-settings.errorMessage"></div>
+
           <div class="actions">
-            <button id="register-button" type="submit" class="button button-cta w-full">
-              <i class="fa fa-spinner fa-spin hidden" id="button-spinner"></i>
+            <button id="register-button" type="submit" class="button button-cta w-full" data-target="payment-settings.submitButton" data-action="payment-settings#submit">
+              <i class="fa fa-spinner fa-spin hidden" data-target="payment-settings.loadingIndicator"></i>
               <%= t 'update' %>
             </button>
           </div>
@@ -152,10 +153,3 @@
 
 <%= render "shared/footer", skip_prefooter: true %>
 
-<% content_for :javascript_tags do %>
-  <script type="text/javascript">
-    $(document).ready(function() {
-      initializeEditCard();
-    });
-  </script>
-<% end %>
