--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -3,7 +3,7 @@
 
 <%= render "shared/header" %>
 
-<div class="bg-blue-pastel">
+<div id="dashboard" class="bg-blue-pastel">
   <section class="section-padding">
     <h2 class="heading-xl mb-12"><%= t 'dashboard.heading' %></h2>
 
