--- a/app/views/devise/registrations/_sign_up_form_without_subscription.html.erb
+++ b/app/views/devise/registrations/_sign_up_form_without_subscription.html.erb
@@ -119,7 +119,7 @@
 
       <button class="button button-cta w-full"
         data-target="registration-form.submitButton membership-choice.subscriptionInfo"
-        data-action="registration-form#submit"
+        data-action="registration-form#submitWithCardDetails"
         data-active-class="button button-cta w-full block"
         data-inactive-class="hidden"
       >
@@ -129,7 +129,7 @@
 
       <button class="button button-cta w-full hidden"
         data-target="registration-form.submitButton membership-choice.noSubscriptionInfo"
-        data-action="registration-form#submitWithoutCardDetails"
+        data-action="registration-form#submit"
         data-active-class="button button-cta block w-full"
         data-inactive-class="hidden"
       >
