--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,6 +59,7 @@
   <%# TODO: Change text-green-dark to text-primary when Bootstrap is gone. These apply to both new and old worlds, so text-primary clashes because it exists in both. %>
   <body class="<%= controller_name + " " + controller_name + "-" + action_name %> min-h-screen text-base text-green-dark bg-green-dark">
 
+    <!-- TODO: Will be fixed and tested further on
     <% if params[:registered].to_i == 1 %>
       <script>
         fbq('track', 'signed_up_without_subscription');
@@ -72,6 +73,7 @@
           );
       </script>
     <% end %>
+    -->
     <% if params[:subscribed].to_i == 1 %>
       <script>
         fbq('track', 'Purchase', {
