--- a/app/views/know_your_footprint/show.html.erb
+++ b/app/views/know_your_footprint/show.html.erb
@@ -11,6 +11,7 @@
         <p class="text-center font-bold">Take the test and start your journey towards a more climate friendly life</p>
         <div>
           <%= form_with url: new_lifestyle_footprint_path, method: :get, class: 'm-lg:flex m-lg:justify-center mt-3' do |f| %>
+            <%= f.hidden_field 'campaign', value: 'know-your-footprint' %>
             <div class="select-wrapper w-full m-lg:w-auto">
               <label for="country" class="sr-only">Select your country</label>
               <%= f.country_select :country,
@@ -30,8 +31,9 @@
         </div>
       </div>
     </div>
-    <div class="t:w-1/2">
-      <%= image_tag webpack_asset_path('images/illustrations/co2.png'), class: 'w-full max-w-lg' %>
+    <div class="t:w-1/2 relative">
+      <%= image_tag webpack_asset_path('images/shapes/blob_1.svg'), class: 'w-full max-w-lg absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2' %>
+      <%= image_tag webpack_asset_path('images/illustrations/co2.png'), class: 'w-full max-w-lg relative mx-auto' %>
     </div>
   </div>
 </section>
@@ -45,8 +47,9 @@
         <p>Main areas to look at in terms of your carbon footprint are home, diet, travelling, shopping and public consumption. By signing up with GoClimate you will be able to get a better idea of which of your lifestyle choices emit the most CO2 today, as well as get support in reducing it over time.</p>
       </div>
     </div>
-    <div class="t:w-1/2">
-      <%= image_tag webpack_asset_path('images/illustrations/carbon_footprint.png'), class: 'w-full max-w-lg' %>
+    <div class="t:w-1/2 relative">
+      <%= image_tag webpack_asset_path('images/shapes/blob_2.svg'), class: 'w-full max-w-lg absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2' %>
+      <%= image_tag webpack_asset_path('images/illustrations/carbon_footprint.png'), class: 'w-full max-w-lg relative mx-auto' %>
     </div>
   </div>
 </section>
@@ -57,8 +60,9 @@
       <h2 class="heading-lg">System change and behavioral change</h2>
       <p>Big corporations and governments are responsible for national policies and collective emissions, but as individuals, we are also responsible for a share in all of this. If we all join forces, we can both reduce emissions on an individual and collective level, as well as exert pressure on governments to improve legislation. This is not an either/or situation, we need to do everything - drive system change AND change our own behavior!</p>
     </div>
-    <div class="t:w-1/2">
-      <%= image_tag webpack_asset_path('images/illustrations/changes.png'), class: 'w-full max-w-lg' %>
+    <div class="t:w-1/2 relative">
+      <%= image_tag webpack_asset_path('images/shapes/blob_2.svg'), class: 'w-full max-w-lg absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2' %>
+      <%= image_tag webpack_asset_path('images/illustrations/changes.png'), class: 'w-full max-w-lg relative mx-auto' %>
     </div>
   </div>
 </section>
@@ -69,8 +73,9 @@
       <h2 class="heading-lg">Global North vs Global South</h2>
       <p>The carbon footprint of someone living in the Global North is so much higher than that of the average individual living in the Global South. Therefore, those of us who are privileged enough to have a choice to make changes, need to act now to get our emissions down.</p>
     </div>
-    <div class="t:w-1/2">
-      <%= image_tag webpack_asset_path('images/illustrations/climate_justice.png'), class: 'w-full max-w-lg' %>
+    <div class="t:w-1/2 relative">
+      <%= image_tag webpack_asset_path('images/shapes/blob_2.svg'), class: 'w-full max-w-lg absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2' %>
+      <%= image_tag webpack_asset_path('images/illustrations/climate_justice.png'), class: 'w-full max-w-lg relative mx-auto' %>
     </div>
   </div>
 </section>
@@ -84,6 +89,7 @@
         <p class="text-center font-bold">Take the test and start your journey towards a more climate friendly life</p>
         <div>
           <%= form_with url: new_lifestyle_footprint_path, method: :get, class: 'm-lg:flex m-lg:justify-center mt-3' do |f| %>
+            <%= f.hidden_field 'campaign', value: 'know-your-footprint' %>
             <div class="select-wrapper w-full m-lg:w-auto">
               <label for="country" class="sr-only">Select your country</label>
               <%= f.country_select :country,
@@ -103,13 +109,36 @@
         </div>
       </div>
     </div>
-    <div class="t:w-1/2">
-      <%= image_tag webpack_asset_path('images/illustrations/participate.png'), class: 'w-full max-w-lg' %>
+    <div class="t:w-1/2 relative">
+      <%= image_tag webpack_asset_path('images/shapes/blob_2.svg'), class: 'w-full max-w-lg absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2' %>
+      <%= image_tag webpack_asset_path('images/illustrations/participate.png'), class: 'w-full max-w-lg relative mx-auto' %>
     </div>
   </div>
 </section>
 
 <%= render 'shared/more_info', pages: [:about, :transparency] %>
+
+<section class="section-padding">
+  <h2 class="heading-lg"><%=t 'views.projects.latest_projects' %></h2>
+
+  <div class="mt-12 flex flex-col d:flex-row section-gutter">
+    <% @projects.take(3).each do |project| %>
+      <div class="d:w-1/3 pt-20 m-lg:pt-24">
+        <div class="callout h-full space-y-3 pt-0">
+          <div class="inline-block w-full">
+            <img class="mx-auto h-40 w-40 -mt-20 m-lg:h-48 m-lg:w-48 m-lg:-mt-24 rounded-full object-cover" src="<%= project.image_url %>">
+          </div>
+          <h3 class="heading"><%= project.name %></h3>
+          <%= simple_format(project.short_description) %>
+        </div>
+      </div>
+    <% end %>
+  </div>
+
+  <div class="mt-12 text-center">
+    <%= link_to t('views.projects.see_all'), projects_path, class: 'button' %>
+  </div>
+</section>
 
 <%= render "shared/bottom_landscape" %>
 <%= render 'shared/footer', skip_prefooter: true %>
