Design sign up page

--- a/app/views/devise/registrations/_calculator_result_new.html.erb
+++ b/app/views/devise/registrations/_calculator_result_new.html.erb
@@ -16,112 +16,10 @@
     </li>
   </ul>
   <section class="space-y-6" data-target="tabs.panel">
-    <% max_value_comparison = [@footprint.total.tonnes.round(1), @country_average.co2e.tonnes.round(1), 2.5].max %>
-    <div class="pr-16">
-      <div class="relative pb-1">
-        <div class="space-y-6">
-          <div>
-            <p class="relative font-bold z-10 "><%= t 'views.registrations.you' %> <-</p>
-            <div class="relative h-6 bg-green-accent rounded-r" style="width: <%= @footprint.total.tonnes.round(1) / max_value_comparison * 100 %>%">
-              <span class="absolute left-100 ml-2 font-bold"><%= @footprint.total.tonnes.round(1) %></span>
-            </div>
-          </div>
-          <div>
-            <p class="relative z-10 "><%= @country_average.countries.nil? ? t('views.registrations.world_average') : t('views.registrations.average_in', region: @footprint.country.translation(I18n.locale)) %></p>
-            <div class="relative h-6 bg-primary rounded-r" style="width: <%= @country_average.co2e.tonnes.round(1) / max_value_comparison * 100 %>%">
-              <span class="absolute left-100 ml-2 font-bold"><%= @country_average.co2e.tonnes.round(1) %></span>
-            </div>
-          </div>
-          <div>
-            <p class="relative z-10 "><%= t 'views.registrations.goal_2030' %></p>
-            <div class="relative h-6 bg-primary rounded-r" style="width: <%= 2.5 / max_value_comparison * 100 %>%">
-              <span class="absolute left-100 ml-2 font-bold">2.5</span>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <p>
-      <% footprint_text_options = {
-          footprint: @footprint.total.to_s(precision: :auto),
-          relative:
-            if @footprint.total > @country_average.co2e
-              "#{((@footprint.total.co2e.to_f / @country_average.co2e.co2e - 1) * 100).ceil} % #{t 'views.registrations.higher'}"
-            else
-              "#{((1 - @footprint.total.co2e.to_f / @country_average.co2e.co2e) * 100).ceil} % #{t 'views.registrations.lower'}"
-            end,
-          country: @footprint.country.translation(I18n.locale)
-      } %>
-      <% if @country_average.countries.nil? %>
-        <%= t("views.registrations.your_climate_footprint_compared_world", **footprint_text_options) %>
-      <% else %>
-        <%= t("views.registrations.your_climate_footprint", **footprint_text_options) %>
-      <% end %>
-    </p>
+    <%= render "chart_world_comparison" %>
   </section>
   <section class="space-y-3 m-lg:space-y-0" data-target="tabs.panel">
     <h3 class="heading m-lg:hidden"><%= t 'dashboard.footprint.heading_more' %></h3>
-    <!-- diagram -->
-    <div class="relative pb-1">
-      <div class="space-y-6">
-        <% max_value_categories = [@footprint.housing.tonnes.round(1), @footprint.food.tonnes.round(1), @footprint.car.tonnes.round(1), @footprint.flights.tonnes.round(1), @footprint.public.tonnes.round(1)].max %>
-        <% [
-            {
-              amount: @footprint.housing,
-              icon: 'fa-home',
-              title: t('dashboard.footprint.category.housing'),
-              'bg-color': 'bg-green-accent'
-            },
-            {
-              amount: @footprint.food,
-              icon: 'fa-cutlery',
-              title: t('dashboard.footprint.category.food'),
-              'bg-color': 'bg-yellow-accent'
-            },
-            {
-              amount: @footprint.car,
-              icon: 'fa-car',
-              title: t('dashboard.footprint.category.car'),
-              'bg-color': 'bg-orange-accent'
-            },
-            {
-              amount: @footprint.flights,
-              icon: 'fa-plane',
-              title: t('dashboard.footprint.category.flights'),
-              'bg-color': 'bg-blue-accent'
-            },
-            {
-              key: 'public',
-              amount: @footprint.public,
-              icon: 'fa-university',
-              title: t('dashboard.footprint.category.public'),
-              'bg-color': 'bg-pink-accent'
-            },
-          ].each do |footprint| %>
-          <div class="space-y-2">
-            <div>
-              <i class="fa fa-lg mr-1 m-lg:inline <%= footprint[:icon] %>" aria-hidden="true"></i>
-              <span class="m-lg:text-sm"><%= footprint[:title] %></span>
-            </div>
-            <div class="flex-1 pr-24">
-              <div class="relative h-6 <%= footprint[:amount].tonnes.round(1) > 0 ? 'pr-2 box-content' : '' %>" style="width: <%= footprint[:amount].tonnes.round(1) / max_value_categories * 100 %>%">
-                <div class="w-full h-full rounded-r <%= footprint[:'bg-color'] %>"></div>
-                <span class="absolute left-100 top-1/2 w-24 transform -translate-y-1/2 leading-none">
-                  <span class="font-bold"><%= footprint[:amount].tonnes.round(1) > 0 ? footprint[:amount].tonnes.round(1) : 0 %> <%= t 'tonnes' %></span>
-                  <% if footprint[:key] == 'public' %>
-                    <div>
-                      <a href="https://www.goclimate.com/blog/methodology-behind-the-carbon-footprint-calculator/" target="_blank" class="link text-sm">
-                        <%= t 'dashboard.footprint.more_about_public_category' %>
-                      </a>
-                    </div>
-                  <% end %>
-                </span>
-              </div>
-            </div>
-          </div>
-        <% end %>
-      </div>
-    </div>
-    <!-- end of diagram -->
+    <%= render "chart_categories" %>
   </section>
 </div>
