--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -26,67 +26,4 @@
   </div>
 </section>
 
-<div class="bg-blue-tint-1 relative">
-  <%= image_tag webpack_asset_path('images/illustrations/forest_and_city.png'), class: 'w-11/12 t:w-3/4 mx-auto', style: 'max-width: 812px'%>
-  <%= image_tag webpack_asset_path('images/illustrations/horizon_curve.svg'), class: 'w-full max-h-6 absolute bottom-0' %>
-</div>
-
-<section class="bg-green-tint-1">
-  <div class="section-padding">
-    <div class="section-gutter m-lg:flex">
-      <div class="m-lg:w-1/2 m-lg:pr-16 space-y-3">
-        <a id="where-does-the-money-go" class="absolute -mt-20"></a>
-        <h3 class="font-semibold"><%= t 'views.registrations.where_does_the_money_go.heading' %></h3>
-        <ul class="list-check space-y-3">
-          <li><%= t 'views.registrations.where_does_the_money_go.point_1' %></li>
-          <li><%= t 'views.registrations.where_does_the_money_go.point_2' %></li>
-          <li><%= t 'views.registrations.where_does_the_money_go.point_3' %></li>
-          <li><%= t 'views.registrations.where_does_the_money_go.point_4' %></li>
-        </ul>
-      </div>
-      <div class="m-lg:w-1/2 space-y-3">
-        <h3 class="font-semibold"><%= t 'views.registrations.latest_projects' %></h3>
-        <ul class="space-y-3">
-          <% @projects.each do |project| %>
-            <li class="flex items-center p-3 bg-white rounded border border-gray-tint-2">
-              <div class="mr-4">
-                <div class="rounded-full overflow-hidden bg-cover bg-center w-12 h-12" style="background-image: url('<%= project.image_url %>')"></div>
-              </div>
-              <span>
-                <p class="font-semibold"><%= project.name %></p>
-                <p><%= project.country %></p>
-              </span>
-            </li>
-          <% end %>
-        </ul>
-      </div>
-    </div>
-  </div>
-</section>
-
-<section class="bg-green-tint-1">
-  <div class="section-padding">
-    <div class="text-center max-w-2xl mx-auto space-y-3">
-      <h2 class="heading"><%= t 'views.registrations.faq' %></h2>
-      <% [
-        "climate_neutrality.questions.q2",
-        "offsetting.questions.q2",
-        "offsetting.questions.q3",
-        "offsetting.questions.q6",
-        "offsetting.questions.q9",
-        "our_service.questions.q1",
-        "our_service.questions.q3",
-        "our_service.questions.q4",
-      ].each do |q| %>
-        <div class="block border p-3 rounded text-left collapse">
-          <input id="question-<%= q %>" type="checkbox">
-          <label for="question-<%= q %>" class="flex justify-between cursor-pointer">
-            <div class="font-semibold"><%= t "faq_questions.#{q}.question" %></div>
-            <div class="pl-3"><i class="fa fa-chevron-circle-down collapse-chevron" aria-hidden="true"></i></div>
-          </label>
-          <div class="pt-4 collapse-content"><%= raw(t("faq_questions.#{q}.answer")) %></div>
-        </div>
-      <% end %>
-    </div>
-  </div>
-</section>
+<%= render "footer" %>
