--- a/app/views/devise/registrations/new_campaign.html.erb
+++ b/app/views/devise/registrations/new_campaign.html.erb
@@ -1,92 +1,238 @@
 <%= render "shared/header" %>
 
-<section class="bg-blue-tint-1">
-  <div class="section-padding">
+<div class="bg-blue-tint-1">
+  <section class="section-padding">
     <div class="text-center pb-8 t:pb-16 d:pb-32 lg:px-0 max-w-4xl mx-auto">
       <h1 class="font-semibold text-xl t:text-2xl d-md:text-3xl my-5"><%= t 'views.registrations.well_done' %></h1>
     </div>
 
     <div class="section-gutter flex flex-col t:flex-row t:justify-between">
       <div class="space-y-6 d:space-y-12 t:w-1/2">
-        <% if @active_experiments&.include?(:new_signup) %>
-          <%= render "calculator_result_new" %>
-        <% else %>
-          <%= render "calculator_result" %>
-        <% end %>
+        <div>
+          <h2 class="text-sm"><%= t 'dashboard.footprint.heading' %></h2>
+          <div class="mt-1">
+            <span class="text-xl font-bold text-green-accent"><%= @footprint_tonnes.tonnes.round(1) %></span>
+            <span class="text-lg font-semibold"><%= t 'tonnes_CO2' %></span>
+          </div>
+        </div>
+        <%= render "chart_world_comparison" %>
       </div>
-
       <div class="t:w-1/2">
-        <% if @active_experiments&.include?(:new_signup) %>
-          <%= render "sign_up_form_without_subscription" %>
-        <% else %>
-          <%= render "sign_up_form" %>
-        <% end %>
+        <div class="relative mx-auto w-3/4 m-lg:w-1/2 t:w-full max-w-lg">
+          <%= image_tag webpack_asset_path('images/shapes/blob_1.svg'), class: 'w-full absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2' %>
+          <%= image_tag webpack_asset_path('images/illustrations/co2.png'), class: 'w-full relative' %>
+        </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
-<div class="bg-blue-tint-1 relative">
-  <%= image_tag webpack_asset_path('images/illustrations/forest_and_city.png'), class: 'w-11/12 t:w-3/4 mx-auto', style: 'max-width: 812px'%>
-  <%= image_tag webpack_asset_path('images/illustrations/horizon_curve.svg'), class: 'w-full max-h-6 absolute bottom-0' %>
-</div>
-
-<section class="bg-green-tint-1">
-  <div class="section-padding">
-    <div class="section-gutter m-lg:flex">
-      <div class="m-lg:w-1/2 m-lg:pr-16 space-y-3">
-        <a id="where-does-the-money-go" class="absolute -mt-20"></a>
-        <h3 class="font-semibold"><%= t 'views.registrations.where_does_the_money_go.heading' %></h3>
-        <ul class="list-check space-y-3">
-          <li><%= t 'views.registrations.where_does_the_money_go.point_1' %></li>
-          <li><%= t 'views.registrations.where_does_the_money_go.point_2' %></li>
-          <li><%= t 'views.registrations.where_does_the_money_go.point_3' %></li>
-          <li><%= t 'views.registrations.where_does_the_money_go.point_4' %></li>
-        </ul>
-      </div>
-      <div class="m-lg:w-1/2 space-y-3">
-        <h3 class="font-semibold"><%= t 'views.registrations.latest_projects' %></h3>
-        <ul class="space-y-3">
-          <% @projects.each do |project| %>
-            <li class="flex items-center p-3 bg-white rounded border border-gray-tint-2">
-              <div class="mr-4">
-                <div class="rounded-full overflow-hidden bg-cover bg-center w-12 h-12" style="background-image: url('<%= project.image_url %>')"></div>
-              </div>
-              <span>
-                <p class="font-semibold"><%= project.name %></p>
-                <p><%= project.country %></p>
-              </span>
-            </li>
-          <% end %>
-        </ul>
+  <section class="section-padding">
+    <div class="callout">
+      <div class="section-gutter flex flex-col t:flex-row t:justify-between">
+        <div class="t:w-1/2 space-y-6">
+          <h2 class="heading-lg">What does my carbon footprint consist of?</h2>
+          <p>Main areas to look at in terms of your footprint are living situation, diet, travelling and means of transporation, private consumption and public consumption</p>
+        </div>
+        <div class="t:w-1/2">
+          <%= render "chart_categories" %>
+        </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
-<section class="bg-green-tint-1">
-  <div class="section-padding">
-    <div class="text-center max-w-2xl mx-auto space-y-3">
-      <h2 class="heading"><%= t 'views.registrations.faq' %></h2>
-      <% [
-        "climate_neutrality.questions.q2",
-        "offsetting.questions.q2",
-        "offsetting.questions.q3",
-        "offsetting.questions.q6",
-        "offsetting.questions.q9",
-        "our_service.questions.q1",
-        "our_service.questions.q3",
-        "our_service.questions.q4",
-      ].each do |q| %>
-        <div class="block border p-3 rounded text-left collapse">
-          <input id="question-<%= q %>" type="checkbox">
-          <label for="question-<%= q %>" class="flex justify-between cursor-pointer">
-            <div class="font-semibold"><%= t "faq_questions.#{q}.question" %></div>
-            <div class="pl-3"><i class="fa fa-chevron-circle-down collapse-chevron" aria-hidden="true"></i></div>
-          </label>
-          <div class="pt-4 collapse-content"><%= raw(t("faq_questions.#{q}.answer")) %></div>
+  <section class="section-padding space-y-6">
+    <h2 class="heading-lg">What can I do about this?</h2>
+    <p>We all need to reduce our carbon emissions – here's the top 3 categories–and we'll help you</p>
+    <div class="flex flex-col t:flex-row space-y-6 t:space-y-0 t:space-x-6">
+      <% [1, 2, 3].each do %>
+        <div class="callout t:w-1/3">
+          <h3>This is a climate tip</h3>
         </div>
       <% end %>
     </div>
-  </div>
-</section>
+  </section>
+
+  <section class="section-padding space-y-6" data-controller="registration-price">
+    <h2 class="heading-lg text-center">Let's stop climate change together!</h2>
+    <p class="max-w-2xl mx-auto">Something about how even though reducing your emissions is the first and most important thing - it's still not enough. Sign up to save your result and track your emissions over time. Get support in reducing your footprint, and opt in to offset your lifestyle through climate projects.</p>
+    <div class="flex flex-col t:flex-row t:justify-center items-center space-y-6 t:space-y-0 t:space-x-6" data-controller="membership-choice-campaign">
+
+      <div class="callout max-w-md space-y-6"
+        data-target="membership-choice-campaign.free"
+        data-inactive-class="callout max-w-md space-y-6 hidden"
+        data-active-class="callout max-w-md space-y-6">
+        <h3 class="heading text-center">Free account to track your carbon footprint over time</h3>
+        <div class="space-y-3">
+          <div class="h-px w-full bg-gray-tint-2"></div>
+
+          <div class="flex justify-between">
+            <span class="font-semibold">Your carbon footprint</span>
+            <span class="text-right"><%= @subscription_tonnes.to_s(precision: :auto) %>/<%= t 'years.one' %></span>
+          </div>
+
+          <div class="h-px w-full bg-gray-tint-2"></div>
+
+          <p class="heading-lg text-center py-6">
+            <%= t 'views.registrations.price_free' %>
+          </p>
+
+          <button type="button" class="button w-full" data-action="membership-choice-campaign#showFree">Sign up</button>
+        </div>
+      </div>
+      <div class="callout max-w-md space-y-6"
+        data-target="membership-choice-campaign.paying"
+        data-inactive-class="callout max-w-md space-y-6 hidden"
+        data-active-class="callout max-w-md space-y-6">
+        <h3 class="heading text-center">Offset your carbon footprint through climate projects</h3>
+        <div class="space-y-3">
+          <div class="h-px w-full bg-gray-tint-2"></div>
+
+          <div class="flex justify-between items-center">
+            <span class="font-semibold"><%= t 'views.registrations.number_of_people' %></span>
+            <div class="select-wrapper">
+              <%= form_with method: :get, html: { 'data-target': 'registration-price.peopleForm', 'data-url': new_user_registration_path } do |f| %>
+                <%= f.hidden_field(:lifestyle_footprint, :value => @footprint.key) %>
+                <%= f.hidden_field(:membership, :value => "multi") %>
+                <%= f.select :people,
+                  options_for_select(1..20, params[:people].presence || 1),
+                  {},
+                  { class: 'select', 'data-action': 'registration-price#update' }
+                %>
+              <% end %>
+            </div>
+          </div>
+
+          <div class="h-px w-full bg-gray-tint-2"></div>
+
+          <div class="flex justify-between">
+            <span class="font-semibold"><%= t 'views.registrations.your_subscription' %></span>
+            <span class="text-right"><span data-target="registration-price.subscription"><%= @subscription_tonnes.to_s(precision: :auto) %></span>/<%= t 'years.one' %></span>
+          </div>
+
+          <div class="h-px w-full bg-gray-tint-2"></div>
+
+          <p class="heading-lg text-center py-6">
+            <span data-target="registration-price.price"><%= @plan_price.to_s(precision: :auto) %></span>/<%= t 'months.one' %>
+          </p>
+
+          <button type="button" class="button button-cta w-full" data-action="membership-choice-campaign#showPaying"><%= t 'views.registrations.continue_to_payment' %></button>
+        </div>
+      </div>
+      <div class="callout max-w-md space-y-6 hidden"
+        data-controller="registration-form"
+        data-target="membership-choice-campaign.signupFree"
+        data-inactive-class="callout max-w-md space-y-6 hidden"
+        data-active-class="callout max-w-md space-y-6">
+        <h3 class="heading text-center">Free account to track your carbon footprint over time</h3>
+        <%= form_with url: registration_path(resource_name, format: :json), class: 'space-y-3', html: { 'data-target': 'registration-form.form' } do |f| %>
+          <%= f.hidden_field(:lifestyle_footprint, :value => @footprint&.key) %>
+          <%= f.hidden_field :membership, value: 'free' %>
+          <%= fields_for @user do |user_form| %>
+            <%= user_form.hidden_field :region %>
+
+            <label for="email" class="block font-semibold"><%=t 'email' %></label>
+            <%= user_form.email_field :email, required: true, id: "email", class: "input w-full" %>
+
+            <label for="password" class="block font-semibold mt-3"><%=t 'password' %></label>
+            <%= user_form.password_field :password, required: true, minlength: '6', maxlength: '128', size: 'auto', autocomplete: "off", id: "password", class: "input w-full" %>
+
+            <div class="mt-3">
+              <label>
+                <%= f.check_box :privacy_policy, 'data-target': 'registration-form.privacyPolicyAgreement', 'data-action': 'change->registration-form#updateSubmitButton' %>
+                <span>
+                  <%=t 'i_accept' %>
+                  <%= link_to I18n.t('our_privacy_policy'), privacy_policy_path, target: '_blank', class: 'link' %>
+                </span>
+              </label>
+            </div>
+          <% end %>
+
+          <button class="button button-cta w-full"
+            data-target="registration-form.submitButton membership-choice.noSubscriptionInfo"
+            data-action="registration-form#submit"
+            data-active-class="button button-cta block w-full"
+            data-inactive-class="hidden"
+          >
+            <i class="fa fa-spinner fa-spin hidden" data-target="registration-form.loadingIndicator"></i>
+            <span><%= t 'views.registrations.create_account' %></span>
+          </button>
+
+          <p class="text-orange-shade-1 ml-4" data-target="registration-form.errorMessage"></p>
+
+          <div>
+            <a href="#" class="link-ui text-sm" data-action="membership-choice-campaign#showInitial"><- <%= t 'views.registrations.back' %></a>
+          </div>
+        <% end %>
+      </div>
+      <div class="callout max-w-md space-y-6 hidden"
+        data-controller="registration-form"
+        data-target="membership-choice-campaign.signupPaying"
+        data-inactive-class="callout max-w-md space-y-6 hidden"
+        data-active-class="callout max-w-md space-y-6">
+        <h3 class="heading text-center">Offset your carbon footprint through climate projects</h3>
+        <%= form_with url: registration_path(resource_name, format: :json), class: 'space-y-3', html: { 'data-target': 'registration-form.form' } do |f| %>
+          <%= f.hidden_field(:lifestyle_footprint, :value => @footprint&.key) %>
+          <%= f.hidden_field :people, value: (params[:people].presence || 1), 'data-target': 'registration-price.peopleField' %>
+          <%= f.hidden_field :membership, value: 'multi' %>
+          <%= fields_for @user do |user_form| %>
+            <%= user_form.hidden_field :region %>
+
+            <label for="email" class="block font-semibold"><%=t 'email' %></label>
+            <%= user_form.email_field :email, required: true, id: "email", class: "input w-full" %>
+
+            <label for="password" class="block font-semibold mt-3"><%=t 'password' %></label>
+            <%= user_form.password_field :password, required: true, minlength: '6', maxlength: '128', size: 'auto', autocomplete: "off", id: "password", class: "input w-full" %>
+
+            <div class="mt-3" data-controller="stripe-card-element" data-target="registration-form.stripeCardElement membership-choice-campaign.stripeCardElement" data-active-class="mt-3 block" data-inactive-class="hidden">
+              <label for="card" class=" font-semibold"><%=t 'credit_or_debit_card' %></label>
+              <div class="">
+                <div id="card" class="input mb-1" data-target="stripe-card-element.container"></div>
+                <div class="text-orange-shade-1" data-target="stripe-card-element.errors"></div>
+                <i class="fa fa-lock" aria-hidden="true"></i> <span class="ml-1">Secured by Stripe</span>
+                <%= f.hidden_field :payment_method_id, 'data-target': 'stripe-card-element.paymentMethodField' %>
+              </div>
+            </div>
+
+            <div class="mt-3">
+              <label>
+                <%= f.check_box :privacy_policy, 'data-target': 'registration-form.privacyPolicyAgreement', 'data-action': 'change->registration-form#updateSubmitButton' %>
+                <span>
+                  <%=t 'i_accept' %>
+                  <%= link_to I18n.t('our_privacy_policy'), privacy_policy_path, target: '_blank', class: 'link' %>
+                </span>
+              </label>
+            </div>
+          <% end %>
+
+          <div class="py-6 space-y-1">
+            <p class="heading-lg text-center">
+              <span data-target="registration-price.price"><%= @plan_price.to_s(precision: :auto) %></span>/<%= t 'months.one' %>
+            </p>
+
+            <p class="text-center text-sm" data-target="membership-choice.subscriptionInfo" data-active-class="text-center text-sm block" data-inactive-class="text-center text-sm hidden">
+              <a href="#where-does-the-money-go" class="link inline" data-controller="scroll-to" data-action="scroll-to#scroll"><%= t 'views.registrations.where_does_the_money_go.heading' %></a>
+            </p>
+          </div>
+
+          <button class="button button-cta w-full"
+            data-target="registration-form.submitButton membership-choice.subscriptionInfo"
+            data-action="registration-form#submitWithCardDetails"
+            data-active-class="button button-cta w-full block"
+            data-inactive-class="hidden"
+          >
+            <i class="fa fa-spinner fa-spin hidden" data-target="registration-form.loadingIndicator"></i>
+            <span><%= t 'views.registrations.start_subscription' %></span>
+          </button>
+
+          <p class="text-orange-shade-1 ml-4" data-target="registration-form.errorMessage"></p>
+
+          <div>
+            <a href="#" class="link-ui text-sm" data-action="membership-choice-campaign#showInitial"><- <%= t 'views.registrations.back' %></a>
+          </div>
+        <% end %>
+      </div>
+    </div>
+  </section>
+</div>
+
+<%= render "footer" %>
