--- a/app/views/devise/registrations/_chart_categories.html.erb
+++ b/app/views/devise/registrations/_chart_categories.html.erb
@@ -44,7 +44,7 @@
             <div class="w-full h-full rounded-r <%= footprint[:'bg-color'] %>"></div>
             <span class="absolute left-100 top-1/2 w-24 transform -translate-y-1/2 leading-none">
               <span class="font-bold"><%= footprint[:amount].tonnes.round(1) > 0 ? footprint[:amount].tonnes.round(1) : 0 %> <%= t 'tonnes' %></span>
-              <% if footprint[:key] == 'public' %>
+              <% if footprint[:key] == 'public' && !local_assigns[:skip_public_explanation] %>
                 <div>
                   <a href="https://www.goclimate.com/blog/methodology-behind-the-carbon-footprint-calculator/" target="_blank" class="link text-sm">
                     <%= t 'dashboard.footprint.more_about_public_category' %>
