--- a/app/views/know_your_footprint/show.html.erb
+++ b/app/views/know_your_footprint/show.html.erb
@@ -7,10 +7,10 @@
       <p>
         GoClimate fights climate catastrophe by reducing greenhouse gas emissions, whilst centring climate justice and operating with 100% transparency. As a community, we finance effective climate projects that build a foundation for a sustainable future. 
       </p>
-      <div class="callout max-w-xl">
+      <div class="callout max-w-xl mx-auto t:mx-0">
         <p class="text-center font-bold">Take the test and start your journey towards a more climate friendly life</p>
         <div>
-          <%= form_with url: new_lifestyle_footprint_path, method: :get, class: 'm-lg:flex m-lg:justify-center mt-3' do |f| %>
+          <%= form_with url: new_lifestyle_footprint_path, method: :get, class: 'm-lg:flex m-lg:justify-center mt-3', id: 'first-registration-form' do |f| %>
             <%= f.hidden_field 'campaign', value: 'know-your-carbon-footprint' %>
             <div class="select-wrapper w-full m-lg:w-auto">
               <label for="country" class="sr-only">Select your country</label>
@@ -33,8 +33,8 @@
     </div>
     <div class="t:w-2/5 d-lg:w-1/2">
       <div class="relative mx-auto w-3/4 m-lg:w-1/2 t:w-full max-w-lg">
-        <%= image_tag webpack_asset_path('images/shapes/blob_1.svg'), class: 'w-full absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2' %>
-        <%= image_tag webpack_asset_path('images/illustrations/co2.png'), class: 'w-full relative' %>
+        <%= image_tag webpack_asset_path('images/shapes/blob_1.svg'), class: 'w-full absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2', alt: '' %>
+        <%= image_tag webpack_asset_path('images/illustrations/co2.png'), class: 'w-full relative', alt: '' %>
       </div>
     </div>
   </div>
@@ -51,8 +51,8 @@
     </div>
     <div class="t:w-2/5 d-lg:w-1/2">
       <div class="relative mx-auto w-3/4 m-lg:w-1/2 t:w-full max-w-lg">
-        <%= image_tag webpack_asset_path('images/shapes/blob_2.svg'), class: 'w-full absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2' %>
-        <%= image_tag webpack_asset_path('images/illustrations/carbon_footprint.png'), class: 'w-full relative' %>
+        <%= image_tag webpack_asset_path('images/shapes/blob_2.svg'), class: 'w-full absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2', alt: '' %>
+        <%= image_tag webpack_asset_path('images/illustrations/carbon_footprint_content.png'), class: 'w-full relative', alt: '' %>
       </div>
     </div>
   </div>
@@ -66,8 +66,8 @@
     </div>
     <div class="t:w-2/5 d-lg:w-1/2">
       <div class="relative mx-auto w-3/4 m-lg:w-1/2 t:w-full max-w-lg">
-        <%= image_tag webpack_asset_path('images/shapes/blob_3.svg'), class: 'w-full absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2' %>
-        <%= image_tag webpack_asset_path('images/illustrations/changes.png'), class: 'w-full relative' %>
+        <%= image_tag webpack_asset_path('images/shapes/blob_3.svg'), class: 'w-full absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2', alt: '' %>
+        <%= image_tag webpack_asset_path('images/illustrations/changes.png'), class: 'w-full relative', alt: '' %>
       </div>
     </div>
   </div>
@@ -81,8 +81,8 @@
     </div>
     <div class="t:w-2/5 d-lg:w-1/2">
       <div class="relative mx-auto w-3/4 m-lg:w-1/2 t:w-full max-w-lg">
-        <%= image_tag webpack_asset_path('images/shapes/blob_4.svg'), class: 'w-full absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2' %>
-        <%= image_tag webpack_asset_path('images/illustrations/climate_justice.png'), class: 'w-full relative' %>
+        <%= image_tag webpack_asset_path('images/shapes/blob_4.svg'), class: 'w-full absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2', alt: '' %>
+        <%= image_tag webpack_asset_path('images/illustrations/climate_justice.png'), class: 'w-full relative', alt: '' %>
       </div>
     </div>
   </div>
@@ -93,7 +93,7 @@
     <div class="t:w-3/5 d-lg:w-1/2 space-y-6">
       <h2 class="heading-lg">Join us!</h2>
       <p>As a community, we finance effective climate projects that build a foundation for a sustainable future. We only support Gold standard certified climate projects to ensure your money makes as much of a difference as possible.</p>
-      <div class="callout max-w-xl">
+      <div class="callout max-w-xl mx-auto t:mx-0">
         <p class="text-center font-bold">Take the test and start your journey towards a more climate friendly life</p>
         <div>
           <%= form_with url: new_lifestyle_footprint_path, method: :get, class: 'm-lg:flex m-lg:justify-center mt-3' do |f| %>
@@ -119,8 +119,8 @@
     </div>
     <div class="t:w-2/5 d-lg:w-1/2">
       <div class="relative mx-auto w-3/4 m-lg:w-1/2 t:w-full max-w-lg">
-        <%= image_tag webpack_asset_path('images/shapes/blob_2.svg'), class: 'w-full absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2' %>
-        <%= image_tag webpack_asset_path('images/illustrations/participate.png'), class: 'w-full relative' %>
+        <%= image_tag webpack_asset_path('images/shapes/blob_2.svg'), class: 'w-full absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2', alt: '' %>
+        <%= image_tag webpack_asset_path('images/illustrations/participate.png'), class: 'w-full relative', alt: '' %>
       </div>
     </div>
   </div>
